--- a/XamarinTest/XamarinTest/ProductPage.xaml
+++ b/XamarinTest/XamarinTest/ProductPage.xaml
@@ -2,9 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinTest.ProductPage">
-    <ContentPage.Content>
-        <StackLayout>
-            
-        </StackLayout>
-    </ContentPage.Content>
+	<ContentPage.Content>
+		<StackLayout>
+			<Image Source="{Binding pro.Image}" HeightRequest="200"/>
+		</StackLayout>
+	</ContentPage.Content>
 </ContentPage>
